# ray_tracer_rs

./: .gitignore  Cargo.toml  README
src/: animator.rs  body.rs  camera.rs  canvas.rs  color.rs  computed_intersection.rs  intersections.rs  lib.rs  light.rs  material.rs  matrix.rs  plane.rs  ray.rs  sphere.rs  tuple.rs  utils.rs  world.rs  world_loader.rs  worldconfig.ron  zequality.rs
src/canvas/: mod.rs  to_png.rs  to_ppm.rs  to_rgba32.rs  vcanvas.rs  vcolor.rs
www/: bootstrap.js  index.html  index.js  package-lock.json  package.json  render.worker.js  webpack.config.js
